fix: always hide popover on mobile (fixes #104)

--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -526,7 +526,7 @@ header {
   box-shadow: 6px 6px 36px 0px rgba(0,0,0,0.25);
 
   @media all and (max-width: 600px) {
-    display: none;
+    display: none !important;
   }
 
   &.visible {
